@@ -11,7 +11,7 @@
         %td= spacer
         %td{ :valign => :top }
           .label.top.req Due:
-          = f.select :due_date, @due_date, {}, { :style => "width:120px", :onchange => "flip_calendar(this.value)" }
+          = f.select :due_at_hint, @due_at_hint, {}, { :style => "width:120px", :onchange => "flip_calendar(this.value)" }
           = f.text_field :calendar, :style => "width:110px; display:none;", :autocomplete => :off
         %td= spacer
         %td{ :valign => :top }
