@@ -12,10 +12,10 @@
     == To #{link_to(assigned.assignee.full_name, "mailto:" + assigned.assignee.email)}:
     = assigned.name << " &ndash; "
     %tt
-      - if assigned.due_at.nil?
+      - if assigned.due_at_hint == "due_asap"
+        due as soon as possible.
+      - elsif assigned.due_at_hint == "due_later"
         due sometime soon.
-      - elsif assigned.due_at == Task::ASAP
-        due now!
       - elsif assigned.due_at < Date.today
         %span.warn= distance_of_time_in_words(assigned.due_at, Date.today) << " late, was due on #{assigned.due_at.strftime('%b %e')}"
       - elsif assigned.due_at > Date.today
