@@ -7,10 +7,10 @@
 - content_for :javascript_epilogue do
   :javascript
     function flip_calendar(value) {
-      if (value == "on_specific_date") {
-        $("task_due_date").toggle();  // Hide dropdown.
-        $("task_calendar").toggle();  // Show editable date field.
-        $("task_calendar").focus();   // Focus to invoke calendar popup.
+      if (value == "specific_time") {
+        $("task_due_at_hint").toggle(); // Hide dropdown.
+        $("task_calendar").toggle();    // Show editable date field.
+        $("task_calendar").focus();     // Focus to invoke calendar popup.
       }
     }
-    crm.date_select_popup_with_dropdown("task_calendar", "task_due_date");
+    crm.date_select_popup_with_dropdown("task_calendar", "task_due_at_hint");
