@@ -1,6 +1,6 @@
 if @task.valid?
-  page["list_#{@task.due_date}"].show
-  page.insert_html :top, @task.due_date, :partial => @view, :collection => [@task], :locals => { :bucket => @task.due_date }
+  page["list_#{@task.due_at_hint}"].show
+  page.insert_html :top, @task.due_at_hint, :partial => @view, :collection => [@task], :locals => { :bucket => @task.due_at_hint }
   page[dom_id(@task)].visual_effect :highlight, :duration => 1.5
   page[:sidebar].replace_html :partial => "sidebar_index"
   page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
